Acrescentada responsividade à Página

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
         <nav> 
             <ul>
-                <li><a class="button">teste</li></a>
-                <li><a class="button">teste</li></a>
-                <li><a class="button">teste</li></a>
+                <a id="color"class="nav-btn"><li >Home</li></a>
+                <a class="nav-btn"><li >Jogos</li></a>
+                <a class="nav-btn"><li >Sobre nós</li></a>
+                <a class="nav-btn"><li >Login</li></a>
             </ul>
         </nav>
     </header>
@@ -26,9 +27,11 @@
     
     <section class="banner">
         <section class="ver-mais">
+            <div class="container-ver-mais">
             <h1 >Games Flix</h1>
             <p>Confira a maior coletânea de games que a GamesFlix tem a te oferecer</p>
             <a href="#games"><button class="btn-banner">Explorar</button></a>
+            </div>
         </section>
     </section>
    
@@ -112,29 +115,35 @@
     </main>
 
     <footer>
-        <h2>Ramon Roman</h2>
-        <p>Responsável pelo desenvolvimento do código</p>
-        <div>
+
+        <div id="aluno1">
+            <h2>Ramon Roman</h2>
+            <p>Responsável pelo desenvolvimento do código</p>
            <a href="https://www.linkedin.com/in/ramon-roman-mauri-junior-878160109/" target="_blank"><img  src="img/linkedin.png"></a>
            <a href="https://github.com/ramonroman" target="_blank"><img  src="img/github.png"></a>
         </div>
 
-        <h2>Johni Tobias</h2>
-        <p>Responsável pelo desenvolvimento do código</p>
-        <div>
+
+        <div id="aluno2">
+            <h2>Johni Tobias</h2>
+            <p>Responsável pelo desenvolvimento do código</p>
             <a href="" target="_blank"> <img src="img/linkedin.png"></a>
             <a href="" target="_blank"> <img src="img/github.png"></a>
         </div>
         
-        <h2>Pedro Simplício</h2>
-        <p>Responsável pelo desenvolvimento do código</p>
-        <div>
+
+        <div id="aluno3">
+            <h2>Pedro Simplício</h2>
+            <p>Responsável pelo desenvolvimento do código</p>
             <a href="" target="_blank"><img src="img/linkedin.png"></a>
             <a href="" target="_blank"><img src="img/github.png"></a>
         </div>
 
-        <h4>© Direitos reservados</h4>
+        <div id="copyright">
+            <h4 >© Direitos reservados</h4>
+        </div>
     </footer>
+
 
 </body>
 </html>
