Criadas as páginas de reviews sem a estilização completa

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
-    <title>CP.II | Home</title>
+    <title>🎮 GamesFlix | Home</title>
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
     <section class="banner">
         <section class="ver-mais">
             <div class="container-ver-mais">
-            <h1 >Games Flix</h1>
+            <h1>Games Flix</h1>
             <p>Confira a maior coletânea de games que a GamesFlix tem a te oferecer</p>
             <a href="#games"><button class="btn-banner">Explorar</button></a>
             </div>
@@ -47,7 +47,7 @@
                         <p>Mais novo Lançamento da FronSoftware, criadora de outros títulos da série Souls.</p>
                         <p> Um ótimo jogo, desafiador para os jogadores mais exigentes. Nota</p>
                     </div>
-                    <a href="./eldenRing.html" target="_blank"><button>Ver Mais</button></a>
+                    <a href="./elden.html" target="_blank"><button>Ver Mais</button></a>
                 </div>
             </section>
 
@@ -59,7 +59,7 @@
                         <p>Mais novo Lançamento da FronSoftware, criadora de outros títulos da série Souls.</p>
                         <p> Um ótimo jogo, desafiador para os jogadores mais exigentes. Nota</p>
                     </div>
-                    <a href="./eldenRing.html" target="_blank"><button>Ver Mais</button></a>
+                    <a href="./tlou.html" target="_blank"><button>Ver Mais</button></a>
                 </div>
             </section>
 
@@ -71,7 +71,7 @@
                         <p>Mais novo Lançamento da FronSoftware, criadora de outros títulos da série Souls.</p>
                         <p> Um ótimo jogo, desafiador para os jogadores mais exigentes. Nota</p>
                     </div>
-                    <a href="./eldenRing.html" target="_blank"><button>Ver Mais</button></a>
+                    <a href="./warzone.html" target="_blank"><button>Ver Mais</button></a>
                 </div>
             </section>
 
@@ -83,7 +83,7 @@
                         <p>Mais novo Lançamento da FronSoftware, criadora de outros títulos da série Souls.</p>
                         <p> Um ótimo jogo, desafiador para os jogadores mais exigentes. Nota</p>
                     </div>
-                    <a href="./eldenRing.html" target="_blank"><button>Ver Mais</button></a>
+                    <a href="./doom.html" target="_blank"><button>Ver Mais</button></a>
                 </div>
             </section>
 
@@ -95,7 +95,7 @@
                         <p>Mais novo Lançamento da FronSoftware, criadora de outros títulos da série Souls.</p>
                         <p> Um ótimo jogo, desafiador para os jogadores mais exigentes. Nota</p>
                     </div>
-                    <a href="./eldenRing.html" target="_blank"><button>Ver Mais</button></a>
+                    <a href="./bloodborne.html" target="_blank"><button>Ver Mais</button></a>
                 </div>
             </section>
 
@@ -107,7 +107,7 @@
                         <p>Mais novo Lançamento da FronSoftware, criadora de outros títulos da série Souls.</p>
                         <p> Um ótimo jogo, desafiador para os jogadores mais exigentes. Nota</p>
                     </div>
-                    <a href="./eldenRing.html" target="_blank"><button>Ver Mais</button></a>
+                    <a href="./revil2.html" target="_blank"><button>Ver Mais</button></a>
                 </div>
             </section>
         </section>
