--- a/doom.html
+++ b/doom.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/doom.css">
+    <link rel="stylesheet" href="css/menu2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
@@ -14,15 +15,21 @@
     <header>
         <img src="img/joystick.png" alt="Logo Joystick">
 
-        <nav> 
-            <ul>
+        <nav role="navigation">
+            <div id="menuToggle">
+                <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
+            <ul id="menu">
                 <a id="color"class="nav-btn"><li >Home</li></a>
-                <a class="nav-btn"><li >Jogos</li></a>
-                <a class="nav-btn"><li >Sobre nós</li></a>
+                <a href="#games"class="nav-btn"><li >Jogos</li></a>
+                <a href="#footer"class="nav-btn"><li >Sobre nós</li></a>
                 <a class="nav-btn"><li >Login</li></a>
             </ul>
+            </div>
         </nav>
-
+    </header>
 
     </header>
 
