--- a/menu2.html
+++ b/menu2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav role="navigation">
+        <nav role="navigation">
         <div id="menuToggle">
             <input type="checkbox">
             <span></span>
@@ -17,9 +18,18 @@
 
             <ul id="menu">
                 <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Info</a>
-                <a href="#">Contact</a>
+                <a href="#">Jogos</a>
+                <a href="#">Sobre nós</a>
+                <a href="#">Login</a>
+            </ul>
+        </div>  
+
+    </nav>
+            <ul id="menu">
+                <a href="#">Home</a>
+                <a href="#">Jogos</a>
+                <a href="#">Sobre nós</a>
+                <a href="#">Login</a>
             </ul>
         </div>  
 
