Adicionando responsividade 1280px para todas as pages

--- a/revil2.html
+++ b/revil2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/revil2.css">
-    <link rel="stylesheet" href="css/menu2.css">
+    <link rel="stylesheet" href="css/burguer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet">
@@ -28,6 +28,12 @@
                 <a href="#modal" class="nav-btn"><li >Login</li></a>
             </ul>
             </div>
+        </nav>
+        <nav class="nav-desktop">
+            <a href="./index.html"class="nav-btn"><li >Home</li></a>
+            <a href="#about"class="nav-btn"><li >Sobre</li></a>
+            <a href="#footer"class="nav-btn"><li >Sobre nós</li></a>
+            <a href="#modal" class="nav-btn"><li >Login</li></a>
         </nav>
     </header>
 
