--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         <div id="aluno3">
             <h2>Pedro Simplício</h2>
             <p>Responsável pelo desenvolvimento do código, criação do Modal de Login, estilização e revisão.</p>
-            <a href="" target="_blank"><img src="img/linkedin.png" alt="logo LinkedIn"></a>
-            <a href="" target="_blank"><img id="git"  src="img/github.png" alt="logo github"></a>
+            <a href="https://www.linkedin.com/in/pedro-simplicio-developer/" target="_blank"><img src="img/linkedin.png" alt="logo LinkedIn"></a>
+            <a href="https://github.com/PSND20" target="_blank"><img id="git"  src="img/github.png" alt="logo github"></a>
         </div>
 
         <div id="aluno4">
