Linkando o logo Joystick para o index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     
     <header>
-        <img src="img/joystick.png" alt="Logo Joystick">
-
+        <a href="../checkpointFront2/index.html">
+        <img src="img/joystick.png" alt="Logo Joystick" >
+        </a>
         <nav role="navigation">
             <div id="menuToggle">
                 <input type="checkbox">
