--- a/doom.html
+++ b/doom.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <header>
-        <img src="img/joystick.png" alt="Logo Joystick">
-
+        <a href="../checkpointFront2/index.html">
+            <img src="img/joystick.png" alt="Logo Joystick" >
+            </a>
         <nav role="navigation">
             <div id="menuToggle">
                 <input type="checkbox">
